[package]
name = "news"
version = "0.1.0"
authors = ["t"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "*", features = ["from_url"] }
colored = "1.9"
scraper = "*"
textwrap = "*"
reqwest = "*"
term_size = "*"
ncurses = "*"
text_io = "*"
termion = "1.5.4"

[dependencies.redis]
version = "*"

